--- a/ThesisPresentation.tex
+++ b/ThesisPresentation.tex
@@ -140,9 +140,9 @@
 	Стержень при прохождении солитона сжатия:
 	\begin{figure}
 		\vspace{-2mm}
-		\includegraphics[width=0.46\linewidth]{figures/DeformedRod1}
+		\includegraphics[width=0.46\linewidth]{Figures/DeformedRod1}
 		\hspace{5mm}
-		\includegraphics[width=0.46\linewidth]{figures/DeformedRod2}
+		\includegraphics[width=0.46\linewidth]{Figures/DeformedRod2}
 	\end{figure}
 	%\centering
 	%\vspace{1mm}
@@ -154,9 +154,9 @@
 %\animategraphics[loop,controls,width=.5\linewidth]{}{anim/sol}{1}{30}
 %\animategraphics[width=.5\linewidth]{12}{anim/sol}{1}{30}
 %\begin{figure}
-%	\includegraphics[width=0.46\linewidth]{figures/DeformedRod1}
+%	\includegraphics[width=0.46\linewidth]{Figures/DeformedRod1}
 %	\hspace{5mm}
-%	\includegraphics[width=0.46\linewidth]{figures/DeformedRod2}
+%	\includegraphics[width=0.46\linewidth]{Figures/DeformedRod2}
 %	\caption{Продольная волна в стержне.}
 %	\vspace{-5mm}
 %\end{figure}
@@ -172,7 +172,7 @@
 \begin{frame}{Полные трёхмерные уравнения}
 \begin{wrapfigure}[6]{r}{125pt}
 	\vspace{-2mm}
-	\includegraphics[width=\linewidth]{figures/1_RodSchematic}
+	\includegraphics[width=\linewidth]{Figures/1_RodSchematic}
 \end{wrapfigure}
 Трёхмерный вектор перемещения $\color{black}\vect{U}$.\\
 \vspace{1mm}
@@ -210,7 +210,7 @@ $\color{blue}l,\ m,\ n$ --- модули упругости Мурнагана (
 \begin{frame}{Упрощение полных уравнений}
 %\begin{wrapfigure}{r}{125pt}
 %	\vspace{-2mm}
-%	\includegraphics[width=\linewidth]{figures/1_RodSchematic}\\
+%	\includegraphics[width=\linewidth]{Figures/1_RodSchematic}\\
 %	\footnotesize
 %	Радиус стержня --- $R$.\\
 %	Перемещения:\\
@@ -231,7 +231,7 @@ $\color{blue}l,\ m,\ n$ --- модули упругости Мурнагана (
 	\hspace{3mm}
 	\begin{minipage}{.36\textwidth}
 		%\vspace{-2mm}
-		\includegraphics[width=\linewidth]{figures/1_RodSchematic}\\
+		\includegraphics[width=\linewidth]{Figures/1_RodSchematic}\\
 		\footnotesize
 		Радиус стержня --- $R$.\\
 		Перемещения:\\
@@ -268,15 +268,15 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 Солитонное решение: $u(x,t) = A\ \sech^2\left[B \left(x\pm t\cdot c\,\sqrt{1+\frac{2A \beta_1}{3}}\right) \right]$
 \begin{figure}
 \vspace{-6mm}
-\includegraphics[width=1.02\linewidth]{figures/Disp_Sol}
+\includegraphics[width=1.02\linewidth]{Figures/Disp_Sol}
 \end{figure}
 %\parbox{.5\linewidth}{
-%	\includegraphics[width=\linewidth]{figures/DispVelSmall}
+%	\includegraphics[width=\linewidth]{Figures/DispVelSmall}
 %}
 %\parbox{.45\linewidth}{
 %	Солитонное решение:\\
 %	$$u(x,t) = A\ {\rm sech}^2\ \left[B \left(x\pm t\cdot c\,\sqrt{1+\frac{2A \beta_1}{3}}\right) \right]$$
-%	\includegraphics[width=\linewidth]{figures/FourSolitonsColor2}
+%	\includegraphics[width=\linewidth]{Figures/FourSolitonsColor2}
 %}
 
 \end{frame}
@@ -295,13 +295,13 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 
 %\vspace*{3mm}
 %\begin{minipage}{.45\textwidth}
-%	\includegraphics[width=\textwidth]{figures/Error}
+%	\includegraphics[width=\textwidth]{Figures/Error}
 %\end{minipage}
 %\hspace{.05\textwidth}
 %\centering
 %\begin{minipage}{.45\textwidth}
 %	\centering
-%	\includegraphics[width=\textwidth]{figures/Grid2D}\\
+%	\includegraphics[width=\textwidth]{Figures/Grid2D}\\
 %	\vspace{-1mm}
 %	\footnotesize
 %	Пример сетки из двух доменов.
@@ -310,11 +310,11 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 %	\centering
 %	\begin{subfigure}{0.45\textwidth}
 %		\centering
-%		\includegraphics[width=\textwidth]{figures/Error}
+%		\includegraphics[width=\textwidth]{Figures/Error}
 %	\end{subfigure}
 %	\begin{subfigure}{0.45\textwidth}
 %		\centering
-%		\includegraphics[width=\textwidth]{figures/Grid2D}\\
+%		\includegraphics[width=\textwidth]{Figures/Grid2D}\\
 %		\footnotesize
 %		Пример двумерной сетки.
 %	\end{subfigure}
@@ -393,8 +393,8 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 \end{minipage}
 %\begin{figure}[h]
 %	\centering
-%	\includegraphics[width=0.49\linewidth]{figures/SolEvolCompareSmallColor}
-%	\includegraphics[width=0.49\linewidth]{figures/SolEvolCompareSmallColor2}\\
+%	\includegraphics[width=0.49\linewidth]{Figures/SolEvolCompareSmallColor}
+%	\includegraphics[width=0.49\linewidth]{Figures/SolEvolCompareSmallColor2}\\
 %	\flushleft
 %	\vspace{-5mm}
 %	\small
@@ -410,7 +410,7 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 %& V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}
 %\end{align*}
 \begin{wrapfigure}[10]{r}{200pt}
-	\includegraphics[width=\linewidth]{figures/VelAmplColor}
+	\includegraphics[width=\linewidth]{Figures/VelAmplColor}
 	%\caption{Зависимость скорости солитона от амплитуды. Горизонтальная линия --- скорость линейных волн $c$.}
 \end{wrapfigure}
 Зависимость скорости от амплитуды в модели Буссинеска:
@@ -430,7 +430,7 @@ v(A) = c\sqrt{1 + A\frac{2\beta_1}{3}}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.34\textwidth}
-		\includegraphics[width=\linewidth]{figures/ImpactScheme2}
+		\includegraphics[width=\linewidth]{Figures/ImpactScheme2}
 		%{\color{white}\vspace{2mm}123}
 	\end{minipage}
 \end{minipage}
@@ -444,13 +444,13 @@ v(A) = c\sqrt{1 + A\frac{2\beta_1}{3}}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.34\textwidth}
-		\includegraphics[width=\linewidth]{figures/ImpactScheme}
+		\includegraphics[width=\linewidth]{Figures/ImpactScheme}
 		%{\color{white}\vspace{2mm}123}
 	\end{minipage}
 \end{minipage}
 %\begin{figure}[h]
 %	\centering
-%	\includegraphics[width=\linewidth]{figures/Impact2Color_mod}
+%	\includegraphics[width=\linewidth]{Figures/Impact2Color_mod}
 %\end{figure}
 \end{frame}
 
@@ -564,11 +564,11 @@ V_5 &= \frac{1}{24(\lambda + 2\mu)} \left(\rho c^2 V_{3tt} - 4(\lambda+\mu)U_{4x
 		\centering
 		\begin{subfigure}{0.5\textwidth}
 			\flushleft
-			\includegraphics[width=.95\textwidth]{figures/Error}
+			\includegraphics[width=.95\textwidth]{Figures/Error}
 		\end{subfigure}
 		\begin{subfigure}{0.45\textwidth}
 			\centering
-			\includegraphics[width=\textwidth]{figures/Grid2D}\\
+			\includegraphics[width=\textwidth]{Figures/Grid2D}\\
 			\footnotesize
 			Пример двумерной сетки
 		\end{subfigure}
@@ -576,13 +576,13 @@ V_5 &= \frac{1}{24(\lambda + 2\mu)} \left(\rho c^2 V_{3tt} - 4(\lambda+\mu)U_{4x
 \end{frame}
 
 \begin{frame}{Эксперимент}
-\includegraphics[width=1.05\linewidth]{figures/trio_2_300_2}
+\includegraphics[width=1.05\linewidth]{Figures/trio_2_300_2}
 \end{frame}
 
 
 \begin{frame}{Трёхмерная сетка}
 \begin{figure}[h!]
-		\includegraphics[width=.5\linewidth]{figures/Grid3D}
+		\includegraphics[width=.5\linewidth]{Figures/Grid3D}
 \end{figure}
 \end{frame}
 
