--- a/ThesisPresentation.tex
+++ b/ThesisPresentation.tex
@@ -1,4 +1,3 @@
-%\include{beamerpreamble}
 \documentclass[usenames,dvipsnames]{beamer}
 \usetheme{Boadilla}
 \usecolortheme{whale}
@@ -19,15 +18,12 @@
 
 \usepackage{caption,tabularx,subcaption}
 \usepackage{animate}
-%\usepackage{enumitem}
 
 % Absolute value declaration
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\|}{\|}
 \DeclareMathOperator{\erf}{erf}
 \DeclareMathOperator{\trace}{tr}
-%\DeclareMathOperator{\tg}{tg}
-%\DeclareMathOperator{\ctg}{ctg}
 \DeclareMathOperator{\sech}{sech}
 
 % Page breaking in multi-line formulae
@@ -80,17 +76,11 @@
 	\vspace{3mm}
 	\usebeamerfont{title}\inserttitle\par
 	\bigskip
-	%\usebeamerfont{author}\insertauthor\par
-	%\usebeamerfont{institute}\insertinstitute\par
-	%\usebeamerfont{date}\insertdate\par
-	%\usebeamercolor[fg]{titlegraphic}\inserttitlegraphic
 }
 
 
 \title[Волны в нелинейно упругих стержнях]{Продольные волны деформации в нелинейно упругих волноводах}
 \author[Ф.\,Е. Гарбузов]{Ф.\,Е. Гарбузов}
-%\date{Days on Diffraction 2018}
-%\institute[]{Ioffe Institute}
 
 \begin{document}
 
@@ -127,7 +117,7 @@
 
 
 \begin{frame}{Актуальность}
-	%\animategraphics[loop,controls,width=.5\linewidth]{}{anim/sol}{1}{30}
+	%\animategraphics[loop,controls,width=.5\linewidth]{}{Anim/sol}{1}{30}
 	В нелинейно упругих волноводах могут возникать солитоны деформации.\\
 	\vspace{2mm}
 	Солитоны:
@@ -144,23 +134,10 @@
 		\hspace{5mm}
 		\includegraphics[width=0.46\linewidth]{Figures/DeformedRod2}
 	\end{figure}
-	%\centering
-	%\vspace{1mm}
-	%\animategraphics[width=.5\linewidth]{12}{anim/sol}{1}{30}
 \end{frame}
 
  
 \begin{frame}{Задачи}
-%\animategraphics[loop,controls,width=.5\linewidth]{}{anim/sol}{1}{30}
-%\animategraphics[width=.5\linewidth]{12}{anim/sol}{1}{30}
-%\begin{figure}
-%	\includegraphics[width=0.46\linewidth]{Figures/DeformedRod1}
-%	\hspace{5mm}
-%	\includegraphics[width=0.46\linewidth]{Figures/DeformedRod2}
-%	\caption{Продольная волна в стержне.}
-%	\vspace{-5mm}
-%\end{figure}
-%Задачи:
 \begin{enumerate}
 	\item Вывести одномерное уравнение для продольных волн в нелинейно упругом стержне, учитывающее заданные на поверхности напряжения.
 	\item Проанализировать свойства выведенного уравнения и найти его солитонные решения. 
@@ -180,16 +157,10 @@
 \begin{equation*}
 \tens{E} = \frac12 \lb(\nabla\vect{U})^T + \nabla\vect{U} + {\color{blue}(\nabla\vect{U})^T\cdot\nabla\vect{U}}\rb
 \end{equation*}
-%Слабонелинейная деформация (малой, но не бесконечно малой амплитуды).\\
-%\vspace{1mm}
 Определяющее соотношение Мурнагана:
 \small
 \begin{align*}
-%&\color{blue}\vect{U} - \mbox{\color{black}трёхмерный вектор перемещения}\\
-%&\tens{E} = \frac12 \lb(\nabla\vect{U})^T + \nabla\vect{U} + {\color{blue}(\nabla\vect{U})^T\cdot\nabla\vect{U}}\rb\\
 &W = \frac{\lambda + 2\mu}{2}I_1(\tens{E})^2 - 2\mu I_2(\tens{E}) +\color{blue} \frac{l+2m}{3}I_1(\tens{E})^3 - 2m I_1(\tens{E}) I_2(\tens{E}) + n I_3(\tens{E})
-%&\tens{P} = {\color{black}\lambda} \lb\trace{\tens{E}}\rb \tens{{I}} + 2{\color{black}\mu} \tens{E}\\
-%&\hspace{7mm}\color{blue} + l \lb\trace{\tens{E}}\rb^2 \tens{{I}} - m\lb \lb\trace{\tens{E}}\rb^2\tens{{I}} - 2\lb\trace{\tens{E}}\rb\tens{E} - \lb\trace{\tens{E}^2}\rb\tens{{I}}\rb + n\lb\tens{E}^*\rb^T,
 \end{align*}
 $\lambda,\ \mu$ --- модули упругости Ламе (линейные),\\
 $\color{blue}l,\ m,\ n$ --- модули упругости Мурнагана (нелинейные).\\
@@ -208,16 +179,6 @@ $\color{blue}l,\ m,\ n$ --- модули упругости Мурнагана (
 
 
 \begin{frame}{Упрощение полных уравнений}
-%\begin{wrapfigure}{r}{125pt}
-%	\vspace{-2mm}
-%	\includegraphics[width=\linewidth]{Figures/1_RodSchematic}\\
-%	\footnotesize
-%	Радиус стержня --- $R$.\\
-%	Перемещения:\\
-%	$U$ --- осевое (продольное), \\
-%	$V$ --- радиальное (поперечное).
-%\end{wrapfigure}
-%Предположения:
 \begin{itemize}%[noitemsep,topsep=1pt]
 	\hspace{-3mm}
 	\begin{minipage}{.53\textwidth}
@@ -239,8 +200,6 @@ $\color{blue}l,\ m,\ n$ --- модули упругости Мурнагана (
 		$V$ --- радиальное (поперечное).
 	\end{minipage}
 \end{itemize}
-%На боковой поверхности заданы напряжения $\vect{P_b} = (P(x,t), T(x,t), 0)$.
-%\vspace{1mm}
 \setlength{\belowdisplayskip}{1pt} \setlength{\belowdisplayshortskip}{0pt}
 \setlength{\abovedisplayskip}{1pt} \setlength{\abovedisplayshortskip}{0pt}
 Разложение перемещений в степенной ряд по радиальной переменной:
@@ -262,7 +221,6 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 &u_{tt} - c^2 u_{xx} - {\color{black}c^2\left(\beta_1 u^2 + \frac{\beta_2}{E} u P + \frac{\beta_3}{E^2} P^2\right)_{xx}} +\\
 &\hspace{30mm} + {\color{black}R^2 \bigg(\frac{\alpha_1}{c^2} u_{tttt} + \alpha_2 u_{xxtt} + c^2\alpha_3 u_{xxxx} \bigg)} + F(P, T) = 0
 \end{split}}
-%&B_i = \sqrt{\frac{3A\beta_1 E}{-4\left[(A\beta_1 + 3E)^2\alpha_1^{(i)} + 3E(A\beta_1 + 3E)\alpha_2^{(i)} + 9E^2\alpha_3^{(i)}\right] R^2}} \, , \quad i = \overline {1,4}.
 \end{equation*}
 \normalsize 
 Солитонное решение: $u(x,t) = A\ \sech^2\left[B \left(x\pm t\cdot c\,\sqrt{1+\frac{2A \beta_1}{3}}\right) \right]$
@@ -270,20 +228,11 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 \vspace{-6mm}
 \includegraphics[width=1.02\linewidth]{Figures/Disp_Sol}
 \end{figure}
-%\parbox{.5\linewidth}{
-%	\includegraphics[width=\linewidth]{Figures/DispVelSmall}
-%}
-%\parbox{.45\linewidth}{
-%	Солитонное решение:\\
-%	$$u(x,t) = A\ {\rm sech}^2\ \left[B \left(x\pm t\cdot c\,\sqrt{1+\frac{2A \beta_1}{3}}\right) \right]$$
-%	\includegraphics[width=\linewidth]{Figures/FourSolitonsColor2}
-%}
 
 \end{frame}
 
 
 \begin{frame}{Численная схема}
-%\hspace*{-4mm}
 \begin{minipage}{\textwidth}
 \begin{itemize}
 	\item Псевдоспектральный метод: поиск в конечномерном пространстве функции, совпадающей с решением в точках коллокации.
@@ -291,34 +240,6 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 	\item Дискретизация по времени с помощью метода Рунге-Кутты (RK45).
 \end{itemize}
 \end{minipage}
-%Применяется как для полных уравнений, так и для выведенного одномерного уравнения типа Буссинеска.
-
-%\vspace*{3mm}
-%\begin{minipage}{.45\textwidth}
-%	\includegraphics[width=\textwidth]{Figures/Error}
-%\end{minipage}
-%\hspace{.05\textwidth}
-%\centering
-%\begin{minipage}{.45\textwidth}
-%	\centering
-%	\includegraphics[width=\textwidth]{Figures/Grid2D}\\
-%	\vspace{-1mm}
-%	\footnotesize
-%	Пример сетки из двух доменов.
-%\end{minipage}
-%\begin{figure}
-%	\centering
-%	\begin{subfigure}{0.45\textwidth}
-%		\centering
-%		\includegraphics[width=\textwidth]{Figures/Error}
-%	\end{subfigure}
-%	\begin{subfigure}{0.45\textwidth}
-%		\centering
-%		\includegraphics[width=\textwidth]{Figures/Grid2D}\\
-%		\footnotesize
-%		Пример двумерной сетки.
-%	\end{subfigure}
-%\end{figure}
 \end{frame}
 
 
@@ -391,27 +312,12 @@ $u = U_{0x}$ --- продольная деформация, $c = \sqrt{E/\rho}$ 
 		{\color{white}\vspace{2mm}123}
 	\end{minipage}
 \end{minipage}
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[width=0.49\linewidth]{Figures/SolEvolCompareSmallColor}
-%	\includegraphics[width=0.49\linewidth]{Figures/SolEvolCompareSmallColor2}\\
-%	\flushleft
-%	\vspace{-5mm}
-%	\small
-%	Профили продольной деформации $-U_x(x - ct, 0, t)$ в центре стержня в различные моменты времени. Масштаб амплитуды деформации показан чёрным прямоугольником.
-%\end{figure}
 \end{frame}
 
 
 \begin{frame}{Сравнение моделей: скорость-амплитуда}
-%Начальные условия:
-%\begin{align*}
-%& U_0 (x, r) = A_0 W \erf\lb \frac{x - L/2}{W}\rb,&  &\dot{U}_0 (x, r) = -c \pdiff{U_0}{x}\\
-%& V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}
-%\end{align*}
 \begin{wrapfigure}[10]{r}{200pt}
 	\includegraphics[width=\linewidth]{Figures/VelAmplColor}
-	%\caption{Зависимость скорости солитона от амплитуды. Горизонтальная линия --- скорость линейных волн $c$.}
 \end{wrapfigure}
 Зависимость скорости от амплитуды в модели Буссинеска:
 \begin{equation}\nonumber
@@ -431,7 +337,6 @@ v(A) = c\sqrt{1 + A\frac{2\beta_1}{3}}
 	\hfill
 	\begin{minipage}[b]{0.34\textwidth}
 		\includegraphics[width=\linewidth]{Figures/ImpactScheme2}
-		%{\color{white}\vspace{2mm}123}
 	\end{minipage}
 \end{minipage}
 
@@ -445,27 +350,18 @@ v(A) = c\sqrt{1 + A\frac{2\beta_1}{3}}
 	\hfill
 	\begin{minipage}[b]{0.34\textwidth}
 		\includegraphics[width=\linewidth]{Figures/ImpactScheme}
-		%{\color{white}\vspace{2mm}123}
 	\end{minipage}
 \end{minipage}
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[width=\linewidth]{Figures/Impact2Color_mod}
-%\end{figure}
 \end{frame}
 
 
 \begin{frame}{Заключение}
-%Результаты:
 \begin{itemize}
 	\item Выведено 
 	новое асимптотическое уравнение типа Буссинеска с~внешним воздействием, описывающая продольные волны в~нелинейно упругих стержнях круглого сечения.
 	\item Построен метод, позволяющий численно моделировать полные уравнения движения стержня в рамках нелинейной теории упругости.
 	\item Численно решён ряд начально-краевых задач, показывающих применимость выведенного уравнения типа Буссинеска для моделирования возникновения солитонов деформации.
 \end{itemize}
-%Для описания продольных длинных волн в стержнях круглого сечения мы вывели две новые асимптотические модели типа Буссинеска, отличающиеся друг от друга коэффициентами при дисперсионных слагаемых. Эти модели обобщены на случай ненулевой осесимметричной нагрузки на боковой поверхности, а также на случай предварительно растянутого стержня.
-
-%Нам удалось построить метод, позволяющий численно моделировать полные трёхмерные уравнения движения стержня в рамках нелинейной теории упругости. Мы численно решили ряд начально-краевых задач и показали хорошую применимость модели типа Буссинеска для моделирования возникновения солитонов.
 \end{frame}
 
 
@@ -544,11 +440,6 @@ V_5 &= \frac{1}{24(\lambda + 2\mu)} \left(\rho c^2 V_{3tt} - 4(\lambda+\mu)U_{4x
 \end{frame}
 
 
-%\begin{frame}{Срез функций перемещения}
-%
-%\end{frame}
-
-
 \begin{frame}{Многодоменный псевдоспектральный метод}
 	\hspace*{-2mm}
 	\begin{minipage}{1.02\textwidth}
@@ -558,8 +449,7 @@ V_5 &= \frac{1}{24(\lambda + 2\mu)} \left(\rho c^2 V_{3tt} - 4(\lambda+\mu)U_{4x
 			\item Для ускорения: многодоменный псевдоспектральный метод.
 		\end{itemize}
 	\end{minipage}
-	%Применяется как для полных уравнений, так и для выведенного одномерного уравнения типа Буссинеска.
-	
+
 	\begin{figure}
 		\centering
 		\begin{subfigure}{0.5\textwidth}
