--- a/ThesisBrief.tex
+++ b/ThesisBrief.tex
@@ -1,4 +1,7 @@
-%%!TeX TS-program = xelatex
+%%% Fedor Garbuzov
+%%% fedor.garbuzov@gmail.com
+%%% 2019
+
 %!TeX encoding = UTF-8
 % !TeX spellcheck = russian-aot
 \documentclass[12pt, a4paper]{article}
