--- a/ThesisFull.tex
+++ b/ThesisFull.tex
@@ -1,15 +1,11 @@
+%%% Fedor Garbuzov
+%%% fedor.garbuzov@gmail.com
+%%% 2019
+
 %!TeX TS-program = xelatex
 %!TeX encoding = UTF-8
 % !TeX spellcheck = russian-aot
 \documentclass[12pt, a4paper]{report}
-
-% Basic packages
-%\usepackage[T1,T2A]{fontenc}
-%\usepackage[cp1251]{inputenc}
-%\usepackage[english,russian]{babel}	% Localization
-%\usepackage{extsizes} % Big font
-%\usepackage{erewhon}  % Different font
-%\setmainfont{Georgia}
 
 % Basic packages XeLaTex
 \usepackage{xecyr}
