--- a/ThesisPresentation.tex
+++ b/ThesisPresentation.tex
@@ -1,3 +1,7 @@
+%%% Fedor Garbuzov
+%%% fedor.garbuzov@gmail.com
+%%% 2019
+
 \documentclass[usenames,dvipsnames]{beamer}
 \usetheme{Boadilla}
 \usecolortheme{whale}
